--- a/public/pi.css
+++ b/public/pi.css
@@ -53,11 +53,9 @@ object-fit: cover;
 
 }
 #header_image{
-    height: 13vh;
-    width: 100%;
-    margin:0px;
-    object-fit: cover;
-
+        width: 50%;
+        height: 100%;
+        object-fit: fill;
 }
 .instituto{
     margin-left: 10px;
