--- a/public/pi.css
+++ b/public/pi.css
@@ -16,9 +16,9 @@ header{
     align-items: center;
 }
 #logo{
-    height:21.25vh;
-    width: 17vw;
-    border-radius: 50%;
+    height:100%;
+    width: 50%;
+    object-fit: fill;
 }
 .wide-button{
     width: fit-content;
