--- a/public/pi.css
+++ b/public/pi.css
@@ -16,9 +16,10 @@ header{
     align-items: center;
 }
 #logo{
-    height:100%;
-    width: 50%;
+     height:100%;
+    width: fit-content;
     object-fit: fill;
+    
 }
 .wide-button{
     width: fit-content;
